Changes based on Tomas recommendations

--- a/index.html
+++ b/index.html
@@ -114,9 +114,7 @@
       <table>
         <tr>
           <td>
-            <a href="https://www.linkedin.com/in/veronika-novakova-3214b261/"
-              >LinkedIn</a
-            >
+            <a href="https://www.linkedin.com/in/veronika-novakova-3214b261/">LinkedIn</a>
           </td>
         </tr>
 
@@ -126,9 +124,7 @@
 
         <tr>
           <td>
-            <a href="https://www.instagram.com/veronika2novakova/?hl=cs"
-              >Instagram</a
-            >
+            <a href="https://www.instagram.com/veronika2novakova/?hl=cs">Instagram</a>
           </td>
         </tr>
       </table>
